--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   provider: ^2.0.1
   rxdart: ^0.22.0
+  flutter_downloader: 
+  path_provider:
   url_launcher:
   http:
 
